# void-intelligence

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  COMPARISON.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  benchmark_cli.py  benchmark_generations.json  benchmark_generations.py  demo.tape  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: benchmark_submission.md  bug_report.md  feature_request.md
.github/workflows/: test.yml
benchmarks/: README.md  benchmark_cli_results.json  benchmark_frontier_2026.json  benchmark_generations.md  benchmark_results.json  benchmark_results.md
docs/: claude-code-plugin.md  marketing-architecture.md  pitch-mittelstand.md
examples/: 01_basic.py  02_router.py  03_enterprise.py  04_immune.py  05_ring_graph.py  06_stribeck_tuner.py  07_cross_pollination.py  08_vscore_api.py  09_swarm_network.py  10_void_everywhere.py  11_the_standard.py
examples/omega-seed/: README.md  immune-rules-seed.json  omega-organism-seed.json  paradigm-rings-seed.jsonl
void_intelligence/: __init__.py  __main__.py  adapters.py  aikido.py  anti_addiction.py  api.py  archaeologe.py  augen.py  autonomy.py  benchmark.py  bewusstseinsfeld.py  bundled_identities.json  cli.py  context_breathing.py  conversation_rings.py  daemon.py  dekagon.py  demo.py  dichter_assistent.py  dominanz.py  dream.py  dream_loop.py  dreams.py  edge.py  embodied.py  empowerment.py  enigma.py  ensemble.py  evolution.py  evolve.py  fingerprint.py  forscher.py  g_void_server.py  google_augen.py  hebamme.py  hydra.py  immune.py  immunsystem.py  ir.py  journey.py  (+70 more)
void_intelligence/gedaechtnis/: __init__.py  __main__.py  kern.py  scanner.py  takeout.py
void_intelligence/strains/: __init__.py  base.py  business.py  city.py  consumer.py  developer.py  education.py  health.py  research.py
