[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "void-intelligence"
version = "4.0.0"
description = "Models that breathe, not just think. 123 modules. Zero dependencies. SELEN (universal feature detection). Dekagon (10-lens perception). Enigma (auth by depth). Sacred Tokens. Flinch Detection. Thought Volume. Soul persistence. 13 measurement categories nobody else has. pip install void-intelligence."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Julian Guggeis", email = "julian@guggeis.de" },
]
keywords = ["ai", "llm", "breathing-ai", "model-routing", "adaptive-ai", "compound-intelligence", "void", "intelligence", "organism", "growth-rings", "anti-addiction", "flinch-detection", "self-research"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
watch = ["watchdog>=3.0"]
mlx = ["mlx>=0.21", "mlx-lm>=0.21"]
mcp = ["mcp>=1.0"]
all = ["watchdog>=3.0", "mlx>=0.21", "mlx-lm>=0.21", "mcp>=1.0"]

[project.scripts]
void = "void_intelligence.cli:main"

[project.urls]
Homepage = "https://github.com/SupShadow/void-intelligence"
Documentation = "https://void.guggeis.de"

[tool.hatch.build.targets.wheel]
packages = ["void_intelligence"]
